edit-add-finals

--- a/CIVIL ENGINEERING/lec48 MECHANICS OF SOLIDS CORRECTED.htm
+++ b/CIVIL ENGINEERING/lec48 MECHANICS OF SOLIDS CORRECTED.htm
@@ -1,52 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:Mangal;
-	panose-1:0 0 4 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:"Liberation Sans";}
-@font-face
-	{font-family:"Microsoft YaHei";
-	panose-1:2 11 5 3 2 2 4 2 2 4;}
-@font-face
-	{font-family:"Lucida Sans";
-	panose-1:2 11 6 2 3 5 4 2 2 4;}
-@font-face
-	{font-family:"\@Microsoft YaHei";}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-@page WordSection1
-	{size:595.3pt 841.9pt;
-	margin:1.0in 1.0in 1.0in 1.3in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
@@ -101,35 +52,35 @@ cross section or whatever you generally get in the common practice.</span></p>
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So
 now we already know from our equilibrium condition that </span><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:Symbol'>¶<i>s</i></span><i><sub><span
+lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:Symbol'>ï¿½<i>s</i></span><i><sub><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>x</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>x</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 plus </span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
-font-family:Symbol'>¶<i>t</i></span><i><sub><span lang=EN-IN style='font-size:
+font-family:Symbol'>ï¿½<i>t</i></span><i><sub><span lang=EN-IN style='font-size:
 12.0pt;line-height:150%;font-family:"Times New Roman",serif'>xy</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>y</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> is
 equal to zero, and </span><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:Symbol'>¶<i>t</i></span><i><sub><span lang=EN-IN
+150%;font-family:Symbol'>ï¿½<i>t</i></span><i><sub><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>xy</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>x</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 plus </span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
-font-family:Symbol'>¶<i>s</i></span><i><sub><span lang=EN-IN style='font-size:
+font-family:Symbol'>ï¿½<i>s</i></span><i><sub><span lang=EN-IN style='font-size:
 12.0pt;line-height:150%;font-family:"Times New Roman",serif'>y</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>y is</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 equal to 0.</span></p>
@@ -184,19 +135,19 @@ satisfied. So, we need not think about that.</span></p>
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Now,
 we will be only dealing with the first equation, which is more meaningful for
 us. So, from the first equation, we can write simply </span><span lang=EN-IN
-style='font-size:12.0pt;line-height:150%;font-family:Symbol'>¶<i>t</i></span><i><sub><span
+style='font-size:12.0pt;line-height:150%;font-family:Symbol'>ï¿½<i>t</i></span><i><sub><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>xy</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>y</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 is equal to </span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
-font-family:Symbol'>¶<i>s</i></span><i><sub><span lang=EN-IN style='font-size:
+font-family:Symbol'>ï¿½<i>s</i></span><i><sub><span lang=EN-IN style='font-size:
 12.0pt;line-height:150%;font-family:"Times New Roman",serif'>x</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 /</span><span lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:
-Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
+Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
 font-family:"Times New Roman",serif'>x</span></i><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>.
 </span></p>
@@ -216,7 +167,7 @@ src="lec48%20MECHANICS%20OF%20SOLIDS%20CORRECTED_files/image002.jpg"></span></p>
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span lang=EN-IN
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>It
 can be written as </span><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:Symbol'>¶ /¶</span><i><span lang=EN-IN style='font-size:12.0pt;
+150%;font-family:Symbol'>ï¿½ /ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;
 line-height:150%;font-family:"Times New Roman",serif'>x</span></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 of minus <i>M<sub>b</sub> y</i> by <i>I<sub>zz</sub></i> that is expression for
@@ -225,18 +176,12 @@ Symbol'>s</span></i><i><sub><span lang=EN-IN style='font-size:12.0pt;
 line-height:150%;font-family:"Times New Roman",serif'>x</span></sub></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>,
 which is nothing but <i>V y by</i> <i>I<sub>zz</sub></i>. Because </span><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:Symbol'>¶</span><i><span
+lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:Symbol'>ï¿½</span><i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>M<sub>b</sub>
 </span></i><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
-font-family:Symbol'>¶</span><i><span lang=EN-IN style='font-size:12.0pt;
+font-family:Symbol'>ï¿½</span><i><span lang=EN-IN style='font-size:12.0pt;
 line-height:150%;font-family:"Times New Roman",serif'>x</span></i><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>
 is nothing but <i>V</i>, that is the variation of bending moment with respect
 to <i>x,</i> nothing but shear force <i>V</i>. So, <i>V y</i> by <i>I<sub>zz</sub></i>
 right. It is minus <i>V</i>, minus, minus will be becoming plus.</span></p>
-
-</div>
-
-</body>
-
-</html>
