--- a/ELECTRICAL ENGINEERING/lec3 BASIC ELECTRIC CIRCUITS corrected.htm
+++ b/ELECTRICAL ENGINEERING/lec3 BASIC ELECTRIC CIRCUITS corrected.htm
@@ -1,53 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin:0in;
-	text-autospace:none;
-	font-size:11.0pt;
-	font-family:"Times New Roman",serif;}
-p.MsoBodyText, li.MsoBodyText, div.MsoBodyText
-	{mso-style-link:"Body Text Char";
-	margin:0in;
-	text-autospace:none;
-	font-size:12.0pt;
-	font-family:"Times New Roman",serif;}
-span.BodyTextChar
-	{mso-style-name:"Body Text Char";
-	mso-style-link:"Body Text";
-	font-family:"Times New Roman",serif;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-bottom:8.0pt;
-	line-height:107%;}
-@page WordSection1
-	{size:595.5pt 842.0pt;
-	margin:69.0pt 66.0pt 14.0pt 67.0pt;}
-div.WordSection1
-	{page:WordSection1;}
-@page WordSection2
-	{size:595.3pt 841.9pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection2
-	{page:WordSection2;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-top:3.1pt;margin-right:168.5pt;
 margin-bottom:0in;margin-left:167.65pt;margin-bottom:.0001pt;text-align:center;
@@ -206,7 +156,7 @@ style='letter-spacing:-.25pt'> </span>by<span style='letter-spacing:-.5pt'> </sp
 style='letter-spacing:-.35pt'> </span>German<span style='letter-spacing:-.3pt'>
 </span>physicist.<span style='letter-spacing:-.3pt'> </span>Now,<span
 style='letter-spacing:-.3pt'> </span>what<span style='letter-spacing:-.2pt'> </span>does
-Ohm’s law say? Ohm’s law says that, the voltage V across a particular resistor
+Ohmï¿½s law say? Ohmï¿½s law says that, the voltage V across a particular resistor
 is directly proportional to the current I, which is flowing through that
 resistor. So, you can simply represent that V is directly proportional to
 current<span style='letter-spacing:-.2pt'> </span>I.</p>
@@ -233,9 +183,3 @@ style='letter-spacing:-.5pt'> </span>nothing but 1 Volt per<span
 style='letter-spacing:-.1pt'> </span>Ampere.</p>
 
 <p class=MsoNormal>&nbsp;</p>
-
-</div>
-
-</body>
-
-</html>
