--- a/MECHANICAL ENGINEERING/lec2 APPLIED THERMODYNAMICS FOR ENGINEERS corrected.htm
+++ b/MECHANICAL ENGINEERING/lec2 APPLIED THERMODYNAMICS FOR ENGINEERS corrected.htm
@@ -1,55 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:Wingdings;
-	panose-1:5 0 0 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:Latha;
-	panose-1:2 0 4 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-@page WordSection1
-	{size:8.5in 11.0in;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
- /* List Definitions */
- ol
-	{margin-bottom:0in;}
-ul
-	{margin-bottom:0in;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
@@ -73,7 +21,7 @@ line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Lecture – 02</span></b></p>
+"Times New Roman",serif'>Lecture ï¿½ 02</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
@@ -87,7 +35,7 @@ font-family:"Times New Roman",serif'>&nbsp;</span></p>
 150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
 150%;font-family:"Times New Roman",serif'>Hello friends, so again we meet in
 this particular week, where we have started our course on applied
-thermodynamics for engineers.  During this week,  we are reviewing the basic
+thermodynamics for engineers. ï¿½During this week, ï¿½we are reviewing the basic
 principles of thermodynamics, or whatever you must have learned in your basic
 thermodynamics course. We are reviewing those topics and preparing ourselves to
 go into the deeper discussions on the topic of applied thermodynamics.</span></p>
@@ -129,8 +77,8 @@ src="lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image00
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
 150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>The  first term that we have here for
-discussion today  is the energy. Energy is a very important in any discussion
+150%;font-family:"Times New Roman",serif'>The ï¿½first term that we have here for
+discussion today ï¿½is the energy. Energy is a very important in any discussion
 of thermodynamics. Thermodynamics is often defined as a science of energy. </span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
@@ -139,31 +87,25 @@ of thermodynamics. Thermodynamics is often defined as a science of energy. </spa
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
 150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>From a layman’s point of view or any
+150%;font-family:"Times New Roman",serif'>From a laymanï¿½s point of view or any
 general discussion point of view, the energy content in a system can be
 classified into different categories as shown here. We can assume that energy
 can exist in a system in numerous forms like thermal energy, mechanical energy,
 kinetic, potential, electrical energy, magnetic energy, chemical or nuclear
 energy under certain situations. So, it is possible that a system can have all these
 kinds of energies and the sum of all these types of energies is called the total
-energy content of the system. We are going to use ‘E’ to denote the total
+energy content of the system. We are going to use ï¿½Eï¿½ to denote the total
 energy content of the system. We also called it as stored energy so, this
-symbol ‘E’ is used to denote the stored energy. It is an extensive property
-that is why we are using the symbol ‘E’ and its specific version that is ‘e’ defined
+symbol ï¿½Eï¿½ is used to denote the stored energy. It is an extensive property
+that is why we are using the symbol ï¿½Eï¿½ and its specific version that is ï¿½eï¿½ defined
 as </span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
 150%;text-autospace:none'><span lang=EN-IN><img width=624 height=45
 src="lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image002.png"></span><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>or
-stored energy per unit mass is an internal or intensive property.  </span></p>
+stored energy per unit mass is an internal or intensive property. ï¿½</span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
 150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
 150%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
-</div>
-
-</body>
-
-</html>
