--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/lec5 POWER ELECTRONICS  corrected.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/lec5 POWER ELECTRONICS  corrected.htm
@@ -1,62 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:Mangal;
-	panose-1:0 0 4 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:Vrinda;
-	panose-1:0 0 4 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Cambria;
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-p.Default, li.Default, div.Default
-	{mso-style-name:Default;
-	margin:0in;
-	text-autospace:none;
-	font-size:12.0pt;
-	font-family:"Times New Roman",serif;
-	color:black;}
-.MsoChpDefault
-	{font-size:10.0pt;
-	font-family:"Calibri",sans-serif;}
- /* Page Definitions */
- @page WordSection1
-	{size:595.35pt 841.95pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal;text-autospace:none'><b><span lang=EN-IN style='font-size:
@@ -88,7 +29,7 @@ Slide Time:</span><span lang=EN-IN> </span><span lang=EN-IN style='font-size:
 12.0pt;font-family:"Times New Roman",serif'>0:32)</span></p>
 
 <p class=MsoNormal align=center style='text-align:center;line-height:normal'><span
-lang=EN-IN> </span><span lang=EN-IN><img width=384 height=288 id="Picture 1"
+lang=EN-IN>ï¿½</span><span lang=EN-IN><img width=384 height=288 id="Picture 1"
 src="lec5%20POWER%20ELECTRONICS%20%20corrected_files/image001.jpg"
 alt=vlcsnap-00001></span></p>
 
@@ -159,7 +100,7 @@ lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:5.0pt'><img width=10 height=22
 src="lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.gif"></span><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> and
+lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>ï¿½and
 I am going to have V<sub>load</sub> equal to 0, then </span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:5.0pt'><img width=22 height=22
@@ -169,7 +110,7 @@ between </span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:5.0pt'><img width=10 height=22
 src="lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.gif"></span><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> and
+lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>ï¿½and
 2</span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:5.0pt'><img width=10 height=22
@@ -178,7 +119,7 @@ lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So,
-this is going to be the load voltage.  I should say this is supply voltage and
+this is going to be the load voltage. ï¿½I should say this is supply voltage and
 this is load voltage. And this is</span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:5.0pt'><img width=17 height=22
@@ -190,11 +131,11 @@ position:relative;top:5.0pt'><img width=10 height=22
 src="lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.gif"></span><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>.
 So, I can calculate of course, you guys might have done it already in some
-other course that is,  </span></p>
+other course that is,ï¿½ </span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-normal'><span lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>                                               
-              </span><span
+normal'><span lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:8.5pt'><img width=139 height=30
 src="lec5%20POWER%20ELECTRONICS%20%20corrected_files/image006.gif"></span><span
@@ -202,11 +143,11 @@ lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>=V<sub>d
 </sub>(o/p) </span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-normal'><span lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>                                                                                                
- =V<sub>load </sub>(average)</span></p>
+normal'><span lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+ï¿½=V<sub>load </sub>(average)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span
-lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>                                                                                                 
+lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 =</span><span
 lang=EN-IN style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
 position:relative;top:8.5pt'><img width=15 height=30
@@ -226,9 +167,3 @@ obviously although this is an average DC voltage, that is DC component as well
 as AC component, I am not going to have the voltage completely steady, it is
 continuously oscillating. In fact it is going from 0 value to peak value and
 again 0 value and persists at 0 value for another half cycle.</span></p>
-
-</div>
-
-</body>
-
-</html>
