--- a/Multidisciplinary/For Humanites lec49 English Language_corrected.htm
+++ b/Multidisciplinary/For Humanites lec49 English Language_corrected.htm
@@ -1,50 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Georgia;
-	panose-1:2 4 5 2 5 4 5 2 3 3;}
-@font-face
-	{font-family:"Segoe UI";
-	panose-1:2 11 5 2 4 2 4 2 2 3;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-bottom:10.0pt;
-	line-height:115%;}
-@page WordSection1
-	{size:595.35pt 841.95pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>English
@@ -92,10 +45,10 @@ to all,</span></p>
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So,
-we will continue with various aspects of Grammar.  First aspect is modifiers
+we will continue with various aspects of Grammar.ï¿½ First aspect is modifiers
 and another is Voice i.e. Active and Passive Voice. This is something all of
 you must have learnt at your school. Modifiers are important to understand
-especially to make correct sentences in English Language required for  competitive
+especially to make correct sentences in English Language required for ï¿½competitive
 exams. Similarly, Voice is also important because the way you write and how you
 use the Active and Passive voices is also extremely important. </span></p>
 
@@ -104,44 +57,44 @@ use the Active and Passive voices is also extremely important. </span></p>
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Before
 making all these presentations before you, I have consulted a couple of very
 good websites, particularly grammarly.com and other websites on the net; which specially
-pertain  to Grammar. I would suggest that you also keep looking up these sites for
+pertainï¿½ to Grammar. I would suggest that you also keep looking up these sites for
 further better understanding of English Grammar. You also have Martin Hewings
 book, Advanced English Grammar and More Basics. Please refer to Brandon Martin
 without any hesitation and doubt. So, coming back ato what we are doing, a
 modifier changes or clarifies or adds particular phrase. For example, a
-sentence like – “Poor Geeta,  a single mom with three infants has to work at
-two jobs.”</span></p>
+sentence like ï¿½ ï¿½Poor Geeta, ï¿½a single mom with three infants has to work at
+two jobs.ï¿½</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Now
 single mom with three infants becomes your modifier or qualifier. It adds,
 clarifies and limits a particular word in a sentence in order to give some description.
-Modifiers need or tend to be descriptive words.  So a single mom is a modifier
-with three infant children. It is not like “Poor Geeta  is working and taking
-care of three infants.  It is not just that you are talking about  Poor Geeta, 
-a  single mom.  All these are qualifiers. </span></p>
+Modifiers need or tend to be descriptive words. ï¿½So a single mom is a modifier
+with three infant children. It is not like ï¿½Poor Geeta ï¿½is working and taking
+care of three infants. ï¿½It is not just that you are talking about ï¿½Poor Geeta,ï¿½
+aï¿½ single mom. ï¿½All these are qualifiers. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Remember
-modifiers phrases  are, such,  as adjective clause and adverbial phrases exist
-and tend to describe adjectives and adverbs. So, they add value and details of 
+modifiers phrases ï¿½are, such, ï¿½as adjective clause and adverbial phrases exist
+and tend to describe adjectives and adverbs. So, they add value and details ofï¿½
 explanation to all this. In a sentence like poor Geetha, a single mom with
-three infant children is working at two jobs. Here,  you have poor as adjective
-and  single mom etc.  is a clause and three intants are a quantifier.  All
-these expressions and  clauses add meaning to the first sentence; that is
+three infant children is working at two jobs. Here,ï¿½ you have poor as adjective
+andï¿½ single mom etc. ï¿½is a clause and three intants are a quantifier. ï¿½All
+these expressions and ï¿½clauses add meaning to the first sentence; that is
 Sheela or Geetha is working.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Only
-look at only “Geetha is working at two jobs”. How unadorned it is. But look at
-poor Geetha,  a single mother of three infants or three infant children is
+look at only ï¿½Geetha is working at two jobsï¿½. How unadorned it is. But look at
+poor Geetha, ï¿½a single mother of three infants or three infant children is
 working at two jobs. Look at how everything is modified. Modifier can be
 anything, a noun, adjective, a clause or an adverbial phrase. Remember that.
-Modifier  is the key to make a good elegant and eligible sentence. Further remember
-that  modifier placement can appear in a variety of ways, but most often,  it
+Modifierï¿½ is the key to make a good elegant and eligible sentence. Further remember
+that ï¿½modifier placement can appear in a variety of ways, but most often, ï¿½it
 comes in sentence correction, as I already told you. Dangling modifier and
 misplaced modifier are the two categories you have to look at.</span></p>
 
@@ -159,12 +112,6 @@ src="For%20Humanites%20lec49%20English%20Language_corrected_files/image001.jpg">
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Sentences
-that include dangling modifiers typically begin with  an introductory clause
+that include dangling modifiers typically begin with ï¿½an introductory clause
 that describes the subject, but they do not name it immediately. They confuse a
 potential reader.</span></p>
-
-</div>
-
-</body>
-
-</html>
