chemical engineering done

--- a/CHEMICAL ENGINEERING/2.For Engineering lec2 Fluid Mechanics_corrected.htm
+++ b/CHEMICAL ENGINEERING/2.For Engineering lec2 Fluid Mechanics_corrected.htm
@@ -1,45 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-.MsoChpDefault
-	{font-size:10.0pt;
-	font-family:"Calibri",sans-serif;}
-@page WordSection1
-	{size:595.35pt 841.95pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
@@ -60,7 +18,7 @@ color:black'>Indian Institute of Technology, Madras</span></b></p>
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
 color:black'><br>
-Lecture – 02</span></b></p>
+Lecture ï¿½ 02</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif;
@@ -73,8 +31,8 @@ color:black'>&nbsp;</span></b></p>
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif;
-color:black'> Now, let us talk about pressure. So, pressure is a special kind
-of stress.  It is also defined as force per unit area.</span></p>
+color:black'>ï¿½Now, let us talk about pressure. So, pressure is a special kind
+of stress.ï¿½ It is also defined as force per unit area.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%;page-break-after:
@@ -84,9 +42,11 @@ color:black'>(Refer Slide Time: 00:25)</span></p>
 <p class=MsoNormal align=center style='margin-top:12.0pt;margin-right:0in;
 margin-bottom:12.0pt;margin-left:0in;text-align:center;line-height:150%'><span
 lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif;
-color:black'><img width=384 height=288 id="Picture 1"
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image001.jpg"
-alt=vlcsnap-2019-06-28-14h48m16s641></span></p>
+color:black'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+  <figure style="margin: auto;">
+      <img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image001.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+                </figure>
+</div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -98,9 +58,11 @@ direction and d z in z direction. So, that the volume of this fluid element:</sp
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=137 height=22
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image002.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image003.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -111,28 +73,32 @@ point to another. Let us say pressure is given as a function of x, y, z and t.</
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=106 height=22
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image003.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image005.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif;
-color:black'>So, pressure is changing at every point as well as in time…… ok? 
+color:black'>So, pressure is changing at every point as well as in timeï¿½ï¿½ ok?ï¿½
 At any given point x, y, z and t, you know what is the pressure. Now you are
 going to calculate what is the pressure exerted on each face of the fluid. So,
 let us say we are going to look at this face. So, the face that I have marked
 with red color and I want to calculate what is the force on that side. So, I know
 that on this side of this face, I can calculate the force because pressure is
-defined as force per unit area.  Therefore, if I want to talk about a force
+defined as force per unit area. ï¿½Therefore, if I want to talk about a force
 which is acting in the y direction on the left side of of the cube is simply
 going to be: </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=103 height=27
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image004.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image007.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -151,9 +117,11 @@ pressure here can be written as:</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=73 height=43
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image005.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image009.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -163,9 +131,11 @@ pressure on that side. So, therefore, F y on the right side is given as:</span><
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=189 height=43
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image006.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image011.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -177,9 +147,11 @@ it is given as:</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
-style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><img
-width=371 height=43
-src="2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image007.gif"></span></p>
+style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+	<figure style="margin: auto;">
+		<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/CHEMICAL%20ENGINEERING/2.For%20Engineering%20lec2%20Fluid%20Mechanics_corrected_files/image013.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+				  </figure>
+  </div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -188,8 +160,3 @@ color:black'>That is the force that is arising in the y direction due to a
 pressure. We can continue, we can do the same thing in x direction as well as
 in z direction.</span></p>
 
-</div>
-
-</body>
-
-</html>
