--- a/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/lec12 FUNDAMENTALS OF MATERIAL PROCESSING - I corrected.htm
+++ b/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/lec12 FUNDAMENTALS OF MATERIAL PROCESSING - I corrected.htm
@@ -40,9 +40,14 @@
 	Slide Time: 05:04)</span></p>
 	
 	<p class=MsoNormal align=center style='text-align:center;line-height:normal'><span
-	lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'><img
-	width=384 height=288 id="Picture 1"
-	src="lec12%20FUNDAMENTALS%20OF%20MATERIAL%20PROCESSING%20-%20I%20corrected_files/image001.jpg"></span></p>
+	lang=EN-IN style='font-size:12.0pt;font-family:"Times New Roman",serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+		<figure style="margin: auto;">
+			<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MEATLLURGICAL%20ENGINEERING%20AND%20MATERIAL%20SCIENCE/lec12%20FUNDAMENTALS%20OF%20MATERIAL%20PROCESSING%20-%20I%20corrected_files/image001.png?raw=true"
+				alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center"
+				data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0"
+				origin-size="384,288" data-origin="," style="" data-index="12">
+		</figure>
+	</div></span></p>
 	
 	<p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph;
 	line-height:150%'><span lang=EN-IN style='font-size:12.0pt;line-height:150%;
