--- a/Multidisciplinary/For Humanites lec49 English Language_corrected.htm
+++ b/Multidisciplinary/For Humanites lec49 English Language_corrected.htm
@@ -105,9 +105,14 @@ Slide Time: 04:39)</span></p>
 
 <p class=MsoNormal align=center style='margin-top:12.0pt;margin-right:0in;
 margin-bottom:12.0pt;margin-left:0in;text-align:center;line-height:150%'><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><img
-width=384 height=288 id=image8.png
-src="For%20Humanites%20lec49%20English%20Language_corrected_files/image001.jpg"></span></p>
+lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+    <figure style="margin: auto;">
+        <img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/Multidisciplinary/For%20Humanites%20lec49%20English%20Language_corrected_files/image001.png?raw=true"
+            alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center"
+            data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0"
+            origin-size="384,288" data-origin="," style="" data-index="12">
+    </figure>
+</div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
